--- a/blog-page.html
+++ b/blog-page.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Страница Блога | Новый поворот</title>
+    <title>О выезде за границу граждан Украины | Новый поворот</title>
 
     <meta name="keywords" content="Страница Блога | Tуры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации" />
     <meta name="description"
         content="Страница Блога | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
 
     <!-- Open Graph data-->
-    <meta property="og:title" content="Страница Блога | Новый поворот">
-    <meta property="og:description" content="Страница Блога " />
+    <meta property="og:title" content="Блог | Новый поворот">
+    <meta property="og:description" content="О выезде за границу граждан Украины" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/blog-page.html" />
     <meta property="og:image" content="https://novipovorot.pp.ua/images/9.jpg">
@@ -75,11 +75,14 @@
     
     <div class="py-5 w3l-homeblock1 text-center">
     <div class="container mt-md-3 mb-5">
-        <h3 class="blog-desc-big text-center mb-4">Your Blog Posts are Boring? Here are 9 Tips for
-            Making your Writing more Interesting</h3>
+        <h3 class="blog-desc-big text-center mb-4">
+	    О выезде за границу граждан Украины
+	</h3>
         <div class="blog-post-align">
             <div class="blog-post-img">
-                <a href="author.html"><img src="/images/Dovgal_Yuliya.jpg" alt="Dovgal_Yuliya" class="rounded-circle img-fluid"></a>
+                <a href="about.html">
+			<img src="/images/Dovgal_Yuliya.jpg" alt="Dovgal_Yuliya" class="rounded-circle img-fluid">
+		</a>
             </div>
             <div class="blog-post-info">
                 <div class="author align-items-center mb-1">
@@ -105,23 +108,35 @@
 			-->
                 </div>
                 <div class="single-post-content">
-                    <p class="alphabet mb-4 text-justify"><span class="big-letter">A</span>Lorem ipsum dolor sit amet,Ea consequuntur
-                        illum facere aperiam sequi optio
-                        dolor set consectetur.Ea ipsum sed consequuntur illum facere aperiam sequi optio consectetur
-                        adipisicing elitFuga, suscipit totam animi consequatur saepe. Lorem ipsum dolor sit amet,
-                        illum facere sequi optio elit..</p>
-                    <p class="mb-4 text-left">Lorem ipsum, dolor sit amet consectetur adipisicing elit. At, corrupti odit? At
-                        iure facere, porro repellat officia quas, dolores magnam assumenda soluta odit harum voluptate
-                        inventore ipsa maiores fugiat accusamus eos nulla. Iure explicabo officia. Lorem ipsum dolor sit
-                        amet, consectetur adipisicing elit, dolorem.</p>
-                    <blockquote class="blockquote my-5 text-justify" style="color:#696969;">
+                    <p class="alphabet mb-4 text-justify"><span class="big-letter">Д</span>окументами, дающими право на выезд из Украины
+			    и въезд в Украину и удостоверяющими личность гражданина Украины во время пребывания за ее пределами, являются:
+		    </p>
+		    <div class="text-list mb-4 text-left">
+                        <ol>
+                            <li>паспорт гражданина Украины для выезда за границу;</li>
+                            <li>дипломатический паспорт; </li>
+                            <li>служебный паспорт;</li>
+                            <li>проездной документ ребенка; </li>
+                            <li>удостоверение личности моряка. </li>
+                        </ol>
+                    </div>
+			
+                    <p class="mb-4 text-left">
+			    В предусмотренных международными договорами Украины 
+			    случаях вместо указанных документов могут использоваться для выезда за границу другие документы.
+		   </p>
+		   <p class="mb-4 text-left">
+			В случае потери гражданином Украины указанных выше документов, документом, дающим право на въезд в Украину, 
+			является удостоверение личности на возвращение в Украину, которое выдается заграничными дипломатическими учреждениями.
+		   </p>
+                   <!-- <blockquote class="blockquote my-5 text-justify" style="color:#696969;">
                         <div class="icon-quote "><span class="fa fa-quote-left" aria-hidden="true"></span></div>
                         Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio consectetur.Ea
                         consequuntur illum facere aperiam sequi optio consectetur adipisicing elitFuga, suscipit
                         totam animi, dolores magnam assumenda soluta odit harum.
                         <footer class="blockquote-footer mt-3">
                             Smith lara</footer>
-                    </blockquote>
+                    </blockquote>-->
                     <h3 class="blog-desc-big m-0 mb-4 text-left">What makes a good blog post?</h3>
                     <p class="mb-4 text-left">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id
                         erat eu. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in
