--- a/blog-page.html
+++ b/blog-page.html
@@ -32,9 +32,9 @@
      <!-- //google fonts -->
     
     <!-- Template CSS -->
-    <!-- <link rel="stylesheet" href="./css/blog-page.css">-->
-    <link rel="stylesheet" href="/css/style-liberty.css">
-    <!--<link href="css/style.css" rel='stylesheet' type='text/css'> custom css -->
+     <link rel="stylesheet" href="./css/blog-page.css">
+    <!--<link rel="stylesheet" href="/css/style-liberty.css">-->
+    <link href="css/style.css" rel='stylesheet' type='text/css'> <!--custom css -->
     <link href="css/SmoothScrolling.css" rel="stylesheet"><!-- SmoothScrolling.css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
 	
