--- a/blog-page.html
+++ b/blog-page.html
@@ -142,6 +142,17 @@
 			В случае потери гражданином Украины указанных выше документов, документом, дающим право на въезд в Украину, 
 			является удостоверение личности на возвращение в Украину, которое выдается заграничными дипломатическими учреждениями.
 		   </p>
+		   <p class="mb-4 text-left">
+			Гражданин Украины ни при каких обстоятельствах не может быть ограничен в праве на возвращение в Украину.
+		   </p>
+		   <p class="mb-4 text-left">
+			Порядок въезда в иностранное государство регулируется законодательством соответствующего государства, 
+			а также соответствующими международными договорами Украины в сфере взаимных поездок граждан.
+		   </p>
+		   <p class="mb-4 text-left">
+			Пересечение гражданами Украины государственной границы Украины осуществляется в пунктах пропуска 
+			   через государственную границу Украины после предъявления одного из указанных выше документов.
+		   </p>
                    <!-- <blockquote class="blockquote my-5 text-justify" style="color:#696969;">
                         <div class="icon-quote "><span class="fa fa-quote-left" aria-hidden="true"></span></div>
                         Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam sequi optio consectetur.Ea
@@ -150,7 +161,9 @@
                         <footer class="blockquote-footer mt-3">
                             Smith lara</footer>
                     </blockquote>-->
-                    <h3 class="blog-desc-big m-0 mb-4 text-left">What makes a good blog post?</h3>
+                    <h3 class="blog-desc-big m-0 mb-4 text-left">
+			Готовясь к выезду за границу, гражданам желательно ознакомиться с информацией о стране въезда, в частности:
+			</h3>
                     <p class="mb-4 text-left">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id
                         erat eu. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in
                         culpa quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde expedita esse error enim
