--- a/blog-page.html
+++ b/blog-page.html
@@ -164,17 +164,44 @@
                     <h3 class="blog-desc-big m-0 mb-4 text-left">
 			Готовясь к выезду за границу, гражданам желательно ознакомиться с информацией о стране въезда, в частности:
 			</h3>
-                    <p class="mb-4 text-left">Excepteur sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id
-                        erat eu. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in
-                        culpa quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde expedita esse error enim
-                        repellat, architecto corporis rerum ipsa alias cum! </p>
-                    <p class="mb-4 text-left">Dolor sit sed amet, excepteur sint occaecat non proident, sunt in culpa quis. Phasellus
-                        lacinia id erat eu. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in
-                        culpa quis. </p>
-                    <p class="mb-4 text-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, veritatis. Excepteur
-                        sint occaecat non proident, sunt in culpa quis. Phasellus lacinia id
-                        erat eu. Nunc id ipsum fringilla, gravida felis vitae. Phasellus lacinia id, sunt in
-                        culpa quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+	            <div class="text-list mb-4 text-left">
+                        <ol>
+                            <li>ее действующим законодательством;</li>
+                            <li>условиями пребывания на ее территории;</li>
+                            <li>медицинским обслуживанием (особенно вопросам страхования жизни и 
+				    здоровья от несчастных случаев, которые могут произойти во время путешествия)</li>
+                        </ol>
+                    </div>
+			
+                    <p class="mb-4 text-left">
+			Родителям, которые планируют осуществить 
+			    путешествие за границу с ребенком (без второго лица из супругов), 
+			    следует позаботиться о получении нотариально удостоверенного согласия на это другого родителя.
+		    </p>
+                    <p class="mb-4 text-left">
+			Желательно записать адреса и контактные телефоны
+			    дипломатического представительства или консульского 
+			    учреждения Украины в стране, где гражданин находиться, а также иметь с собой:
+		   </p>
+		   <div class="text-list mb-4 text-left">
+                        <ol>
+                            <li>две фотографии размером 35х45 мм;</li>
+                            <li>условиями пребывания на ее территории;</li>
+                            <li>
+				ксерокопию паспорта гражданина Украины для выезда за 
+				    границу (первой, второй страницы и страницы с действительной визой), 
+				    в случае поездки с ребенком - копию свидетельства о его рождении, что
+				    в случае обращения к заграничного дипломатического учреждения Украины 
+				    по поводу потери загранпаспорта значительно ускорит оформление
+				    необходимых документов для возвращения в Украину.
+			    </li>
+                        </ol>
+                    </div>
+			
+                    <p class="mb-4 text-left">
+			 Копии советуем хранить отдельно от оригиналов документов.
+			</p>
+			
                     <div class="sing-post-thumb mb-5 row pt-3">
                         <div class="col-sm-6">
                             <a href="#url"><img src="/images/p1.jpg" class="img-fluid radius-image" alt=""></a>
@@ -210,14 +237,14 @@
 			
                     <div class="d-grid left-right mt-5 pb-md-5">
                         <div class="buttons-singles text-left tags">
-                            <h4>Tags :</h4>
-                            <a href="#blog-tag">Culture</a>
-                            <a href="#blog-tag">Sports</a>
-                            <a href="#blog-tag">Technology</a>
-                            <a href="#blog-tag">Health</a>
+                            <h4>Тэги:</h4>
+                            <a href="#blog-tag">Выезд за границу</a>
+                            <a href="#blog-tag">Туризм</a>
+                            <a href="#blog-tag">Путешествие</a>
+                            <a href="#blog-tag">Правила выезда</a>
                         </div>
                         <div class="buttons-singles text-left">
-                            <h4>Share :</h4>
+                            <h4>Поделиться:</h4>
                             <a href="#blog-share"><span class="fa fa-facebook" aria-hidden="true"></span></a>
                             <a href="#blog-share"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                             <a href="#blog-share"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
