--- a/blog-page.html
+++ b/blog-page.html
@@ -238,10 +238,7 @@
                     <div class="d-grid left-right mt-5 pb-md-5">
                         <div class="buttons-singles text-left tags">
                             <h4>Тэги:</h4>
-                            <a href="#blog-tag">Выезд за границу</a>
-                            <a href="#blog-tag">Туризм</a>
-                            <a href="#blog-tag">Путешествие</a>
-                            <a href="#blog-tag">Правила выезда</a>
+                            <a href="#blog-tag">Правила выезда из Украины</a>
                         </div>
                         <div class="buttons-singles text-left">
                             <h4>Поделиться:</h4>
