--- a/blog-page.html
+++ b/blog-page.html
@@ -190,7 +190,7 @@
 				ксерокопию паспорта гражданина Украины для выезда за 
 				    границу (первой, второй страницы и страницы с действительной визой), 
 				    в случае поездки с ребенком - копию свидетельства о его рождении, что
-				    в случае обращения к заграничного дипломатического учреждения Украины 
+				    в случае обращения к заграничному дипломатическому учреждению Украины 
 				    по поводу потери загранпаспорта значительно ускорит оформление
 				    необходимых документов для возвращения в Украину.
 			    </li>
