--- a/blog-page.html
+++ b/blog-page.html
@@ -241,10 +241,16 @@
                         </div>
                         <div class="buttons-singles text-left">
                             <h4>Поделиться:</h4>
-                            <a href="#blog-share"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-                            <a href="#blog-share"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-                            <a href="#blog-share"><span class="fa fa-google-plus" aria-hidden="true"></span></a>
-                            <a href="#blog-share"><span class="fa fa-pinterest-p" aria-hidden=" true"></span></a>
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/https://novipovorot.pp.ua">
+				    <span class="fa fa-facebook" aria-hidden="true"></span>
+			    </a>
+                            <a href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua">
+				    <span class="fa fa-twitter" aria-hidden="true"></span>
+		            </a>
+                            <a href="https://t.me/share/url?url=https://novipovorot.pp.ua">
+				    <span class="fa fa-telegram" aria-hidden="true"></span>
+				</a>
+                            
                         </div>
                     </div>
     		
