--- a/blog-page.html
+++ b/blog-page.html
@@ -162,7 +162,7 @@
                             Smith lara</footer>
                     </blockquote>-->
                     <h3 class="blog-desc-big m-0 mb-4 text-left">
-			Готовясь к выезду за границу, гражданам желательно ознакомиться с информацией о стране въезда, в частности:
+			Готовясь к выезду за границу, желательно ознакомиться с информацией о стране въезда:
 			</h3>
 	            <div class="text-list mb-4 text-left">
                         <ol>
