--- a/blog-page.html
+++ b/blog-page.html
@@ -241,7 +241,7 @@
                         </div>
                         <div class="buttons-singles text-left">
                             <h4>Поделиться:</h4>
-                            <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fnovipovorot.pp.ua/https://novipovorot.pp.ua">
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua">
 				    <span class="fa fa-facebook" aria-hidden="true"></span>
 			    </a>
                             <a href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua">
