--- a/blog-Travel-abroad-of-citizens-of-Ukraine.html
+++ b/blog-Travel-abroad-of-citizens-of-Ukraine.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Блог | Новый поворот">
     <meta property="og:description" content="О выезде за границу граждан Украины" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://novipovorot.pp.ua/blog-page.html" />
+    <meta property="og:url" content="https://novipovorot.pp.ua/blog-Travel-abroad-of-citizens-of-Ukraine.html" />
     <meta property="og:image" content="https://novipovorot.pp.ua/images/9.jpg">
     <!--End Open Graph data-->
 
@@ -241,13 +241,13 @@
                         </div>
                         <div class="buttons-singles text-left">
                             <h4>Поделиться:</h4>
-                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua">
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/blog-Travel-abroad-of-citizens-of-Ukraine.html">
 				    <span class="fa fa-facebook" aria-hidden="true"></span>
 			    </a>
-                            <a href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua">
+                            <a href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/blog-Travel-abroad-of-citizens-of-Ukraine.html">
 				    <span class="fa fa-twitter" aria-hidden="true"></span>
 		            </a>
-                            <a href="https://t.me/share/url?url=https://novipovorot.pp.ua">
+                            <a href="https://t.me/share/url?url=https://novipovorot.pp.ua/blog-Travel-abroad-of-citizens-of-Ukraine.html">
 				    <span class="fa fa-telegram" aria-hidden="true"></span>
 				</a>
                             
