--- a/blog.html
+++ b/blog.html
@@ -146,11 +146,11 @@
                             <div class="list-view list-view1">
                                 
                                 <div class="grids5-info">
-                                    <a href="#" class="d-block zoom">
+                                    <a href="blog-Travel-abroad-of-citizens-of-Ukraine.html" class="d-block zoom">
                                         <img src="./images/9.jpg" alt="Помогите Изображению"
                                             class="img-fluid radius-image news-image"></a>
                                     <div class="blog-info align-self">
-                                        <a href="blog-page.html" class="blog-desc1">
+                                        <a href="blog-Travel-abroad-of-citizens-of-Ukraine.html" class="blog-desc1">
 						О выезде за границу граждан Украины
                                         </a>
                                         <div class="author align-items-center mt-3 mb-1">
