--- a/blog-Travel-abroad-of-citizens-of-Ukraine.html
+++ b/blog-Travel-abroad-of-citizens-of-Ukraine.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>О выезде за границу граждан Украины | Новый поворот</title>
 
-    <meta name="keywords" content="Страница Блога | Tуры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации" />
+    <meta name="keywords" content="О выезде за границу граждан Украины | Tуры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации" />
     <meta name="description"
-        content="Страница Блога | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
+        content="О выезде за границу граждан Украины | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
 
     <!-- Open Graph data-->
     <meta property="og:title" content="Блог | Новый поворот">
