--- a/blog-Travel-advice-abroad.html
+++ b/blog-Travel-advice-abroad.html
@@ -82,7 +82,7 @@
 	  <ol class="breadcrumb">
 	     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
 	     <li class="breadcrumb-item"><a class="text-primary" href="https://novipovorot.pp.ua/blog.html">Блог</a></li>  
-	     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog-page.html">Рекомендации туристам, которые планируют путешествия за границу </a></li> 
+	     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog-Travel-advice-abroad.html">Рекомендации туристам, которые планируют путешествия за границу </a></li> 
 	  </ol>
 	</nav>
        </div>
@@ -219,17 +219,17 @@
                     <div class="d-grid left-right mt-5 pb-md-5">
                         <div class="buttons-singles text-left tags">
                             <h4>Тэги:</h4>
-                            <a href="#blog-tag">Правила выезда из Украины</a>
+                            <a href="#blog-tag">Рекомендации туристам</a>
                         </div>
                         <div class="buttons-singles text-left">
                             <h4>Поделиться:</h4>
-                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/blog-Travel-abroad-of-citizens-of-Ukraine.html">
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/blog-Travel-advice-abroad.html">
 				    <span class="fa fa-facebook" aria-hidden="true"></span>
 			    </a>
-                            <a href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/blog-Travel-abroad-of-citizens-of-Ukraine.html">
+                            <a href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/blog-Travel-advice-abroad.html">
 				    <span class="fa fa-twitter" aria-hidden="true"></span>
 		            </a>
-                            <a href="https://t.me/share/url?url=https://novipovorot.pp.ua/blog-Travel-abroad-of-citizens-of-Ukraine.html">
+                            <a href="https://t.me/share/url?url=https://novipovorot.pp.ua/blog-Travel-advice-abroad.html">
 				    <span class="fa fa-telegram" aria-hidden="true"></span>
 				</a>
                             
