--- a/blog-Travel-abroad-of-citizens-of-Ukraine.html
+++ b/blog-Travel-abroad-of-citizens-of-Ukraine.html
@@ -82,7 +82,7 @@
 	  <ol class="breadcrumb">
 	     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
 	     <li class="breadcrumb-item"><a class="text-primary" href="https://novipovorot.pp.ua/blog.html">Блог</a></li>  
-	     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog-page.html">О выезде за границу граждан Украины</a></li> 
+	     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog-Travel-abroad-of-citizens-of-Ukraine.html">О выезде за границу граждан Украины</a></li> 
 	  </ol>
 	</nav>
        </div>
