--- a/blog.html
+++ b/blog.html
@@ -124,7 +124,7 @@
                                     </a>
                                 </div>
                                 <div class="card-body p-0 blog-details">
-                                    <a href="#" class="blog-desc">
+                                    <a href="blog-Travel-advice-abroad.html" class="blog-desc">
 					    Рекомендации туристам, которые планируют путешествия за границу
                                     </a>
                                     <p>
