--- a/blog-Travel-advice-abroad.html
+++ b/blog-Travel-advice-abroad.html
@@ -82,7 +82,7 @@
 	  <ol class="breadcrumb">
 	     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
 	     <li class="breadcrumb-item"><a class="text-primary" href="https://novipovorot.pp.ua/blog.html">Блог</a></li>  
-	     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog-Travel-advice-abroad.html">Рекомендации туристам, которые планируют путешествия за границу </a></li> 
+	     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog-Travel-advice-abroad.html">Рекомендации туристам</a></li> 
 	  </ol>
 	</nav>
        </div>
@@ -169,12 +169,12 @@
                         <ol>
                             <li>
                               <a href="https://dpsu.gov.ua/ua/news/Vazhliva-informaciya-stosovno-pravil-shcho-diyut-u-period-karantinu/">
-                              Информация о правилах пересечения границы, которые действуют в период карантина (ГПСУ)
+                              Информация о правилах пересечения границы, которые действуют в период карантина (ГПСУ);
                               </a>
                             </li>
                             <li>
                               <a href="https://moz.gov.ua/koronavirus-2019-ncov">
-                                Информациея о количестве активных случаев COVID-19 на 100 тыс. населения (МОЗ)
+                                Информациея о количестве активных случаев COVID-19 на 100 тыс. населения (МОЗ).
                               </a>
                             </li>
                             
