--- a/blog.html
+++ b/blog.html
@@ -187,7 +187,7 @@
                                     <a href="#" class="d-block zoom"><img src="./images/9.jpg" alt="Помогите Изображению"
                                             class="img-fluid radius-image news-image"></a>
                                     <div class="blog-info align-self">
-                                        <a href="blog-page.html" class="blog-desc1">
+                                        <a href="blog-Medical-travel-abroad.html" class="blog-desc1">
 						Медицинa в путешествии за рубежом 
                                         </a>
                                         <div class="author align-items-center mt-3 mb-1">
