--- a/blog-Medical-travel-abroad.html
+++ b/blog-Medical-travel-abroad.html
@@ -109,6 +109,7 @@
             </div>
         </div>
     </div>
+	    
     <section class="blog-post-main w3l-homeblock1">
         <!--/blog-post-->
         <div class="blog-content-inf pb-5">
@@ -232,7 +233,8 @@
                 </div>
             </div>
             <!--//blog-post-->
-    </div></section>
+   <!-- </div>-->
+	    </section>
 
 	 </div>       
 
