--- a/blog-Medical-travel-abroad.html
+++ b/blog-Medical-travel-abroad.html
@@ -125,7 +125,7 @@
                     <p class="alphabet mb-4 text-justify"><span class="big-letter">П</span>
                       утешеуствуя оказавшись пациентом нужно осознавать все риски и преимущества медицинского обслуживания в другой стране.
                     </p>
-		    <p class="alphabet mb-4 text-justify">
+		    <p class="mb-4 text-left">
 			Выбирая иностранное учреждение здравоохранения,
 			    необходимо выяснить наличие в учреждения опыта работы с иностранными пациентами
 			    и отделов (центров), которые оказывают содействие в организации лечения иностранных граждан, 
@@ -167,7 +167,7 @@
                         <footer class="blockquote-footer mt-3">
                             Smith lara</footer>
                     </blockquote>
-                    <p class="alphabet mb-4 text-justify">
+                    <p class="mb-4 text-left">
 			Следует помнить, что правоотношения между пациентом и клиникой,
 			    и пациентом, и посредником, что оказывает услуги по лечению за рубежом, 
 			    должны быть оформлены в форме письменного договора (контракта),
