--- a/blog-Medical-travel-abroad.html
+++ b/blog-Medical-travel-abroad.html
@@ -164,8 +164,9 @@
 			   на деятельность посреднических структур по оказанию медицинских услуг. 
 			   Министерство здравоохранения Украины рекомендует гражданам Украины позаботиться о
 			   страховом обеспечении процесса лечения за рубежом.
-                        <footer class="blockquote-footer mt-3">
-                            Smith lara</footer>
+                        <!--<footer class="blockquote-footer mt-3">
+                            
+			</footer>-->
                     </blockquote>
                     <p class="mb-4 text-left">
 			Следует помнить, что правоотношения между пациентом и клиникой,
