--- a/blog-Medical-travel-abroad.html
+++ b/blog-Medical-travel-abroad.html
@@ -127,7 +127,7 @@
                     </p>
 		    <p class="mb-4 text-left">
 			Выбирая иностранное учреждение здравоохранения,
-			    необходимо выяснить наличие в учреждения опыта работы с иностранными пациентами
+			    необходимо выяснить наличие в учреждении опыта работы с иностранными пациентами
 			    и отделов (центров), которые оказывают содействие в организации лечения иностранных граждан, 
 			    специализацию заведения, его авторитет, международную аккредитацию. 
 			    С целью предотвращения нарушения Ваших прав за рубежом, особое внимание следует уделить
