--- a/blog.html
+++ b/blog.html
@@ -39,17 +39,7 @@
 	
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!--
-	<style>
-		a:hover {
-			text-decoration: none;
-		}
-
-		button:focus {
-		     outline: none;
-		}
-	</style>
-     -->
+   
 </head>
 
 <body>
@@ -203,10 +193,12 @@
                                 </div>
                                 
                                 <div class="grids5-info mt-5">
-                                    <a href="#" class="d-block zoom"><img src="./images/9.jpg" alt="Помогите Изображению"
-                                            class="img-fluid radius-image news-image"></a>
+                                    <a href="#" class="d-block zoom">
+					    <img src="./images/9.jpg" alt="Помогите Изображению"
+                                            class="img-fluid radius-image news-image">
+					</a>
                                     <div class="blog-info align-self">
-                                        <a href="blog-page.html" class="blog-desc1">
+                                        <a href="blog-Worldwide-spread-of-COVID-19.html" class="blog-desc1">
 						В связи с распространением в мире коронавируса COVID-19
                                         </a>
                                         <div class="author align-items-center mt-3 mb-1">
@@ -214,7 +206,7 @@
                                         </div>
                                         <ul class="blog-meta">
                                             <li class="meta-item blog-lesson">
-                                                <span class="meta-value"> Июль 23, 2021</span>
+                                                <span class="meta-value"> Июль 26, 2021</span>
                                             </li>
                                         </ul>
                                     </div>
