--- a/blog-Medical-travel-abroad.html
+++ b/blog-Medical-travel-abroad.html
@@ -103,7 +103,7 @@
                 </div>
                 <ul class="blog-meta">
                     <li class="meta-item blog-lesson">
-                        <span class="meta-value"> Июль 24, 2021 </span>
+                        <span class="meta-value"> Июнь 24, 2021 </span>
                     </li>
                 </ul>
             </div>
