--- a/blog-Travel-food.html
+++ b/blog-Travel-food.html
@@ -176,7 +176,7 @@
                                  Сахар, конфеты с кислой начинко;
                             </li>
                             <li>
-                                 Лук, чеснок, специи, напитки (чай, кофе, кисель, компот);
+                                 Лук, чеснок, специи, напитки (чай, кофе, кисель, компот).
                             </li>
                         </ol>
                     </div>
