--- a/blog-Travel-food.html
+++ b/blog-Travel-food.html
@@ -173,7 +173,7 @@
                                  Молоко (сгущенное, сухое);
                             </li>
                              <li>
-                                 Сахар, конфеты с кислой начинко;
+                                 Сахар, конфеты с кислой начинкой;
                             </li>
                             <li>
                                  Лук, чеснок, специи, напитки (чай, кофе, кисель, компот).
