--- a/blog-Travel-food.html
+++ b/blog-Travel-food.html
@@ -176,7 +176,7 @@
                                  Сахар, конфеты с кислой начинкой;
                             </li>
                             <li>
-                                 Лук, чеснок, специи, напитки (чай, кофе, кисель, компот).
+                                 Напитки (чай, кофе, кисель, компот).
                             </li>
                         </ol>
                     </div>
