--- a/blog.html
+++ b/blog.html
@@ -223,7 +223,7 @@
                     <div class="grids5-info">
                         <h4>01.</h4>
                         <div class="blog-info">
-                            <a href="#" class="blog-desc1"> 
+                            <a href="blog-Earthquake.html" class="blog-desc1"> 
 				    Рекомендации во время землетрясения
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
@@ -231,7 +231,7 @@
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
-                                    <span class="meta-value">Июль 23, 2021 </span>
+                                    <span class="meta-value">Июль 26, 2021 </span>
                                 </li>
                             </ul>
                         </div>
