--- a/blog.html
+++ b/blog.html
@@ -239,7 +239,7 @@
                     <div class="grids5-info">
                         <h4>02.</h4>
                         <div class="blog-info">
-                            <a href="#blog-single" class="blog-desc1"> 
+                            <a href="blog-Passport-problems.html" class="blog-desc1"> 
 				   Проблемы с паспортом  для выезда за границу в путешествии
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
@@ -247,7 +247,7 @@
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
-                                    <span class="meta-value"> Июль 23, 2021  </span>
+                                    <span class="meta-value"> Июня 22, 2021  </span>
                                 </li>
                             </ul>
                         </div>
