--- a/blog-Passport-problems.html
+++ b/blog-Passport-problems.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Землетрясения | Новый поворот</title>
+    <title>Проблемы с паспортом для выезда за границу в путешествии | Новый поворот</title>
 
-    <meta name="keywords" content="Рекомендации во время землетрясения | Tуры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации" />
+    <meta name="keywords" content="Проблемы с паспортом для выезда за границу в путешествии | Tуры выходного дня 'Новый поворот', Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации" />
     <meta name="description"
-        content="Рекомендации во время землетрясения  | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
+        content="Проблемы с паспортом для выезда за границу в путешествии | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net ">
 
     <!-- Open Graph data-->
     <meta property="og:title" content="Блог | Новый поворот">
-    <meta property="og:description" content="Рекомендации во время землетрясения" />
+    <meta property="og:description" content="Проблемы с паспортом для выезда за границу в путешествии" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/blog-Medical-travel-abroad.html" />
     <meta property="og:image" content="https://novipovorot.pp.ua/images/9.jpg">
@@ -82,14 +82,14 @@
 	  <ol class="breadcrumb">
 	     <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
 	     <li class="breadcrumb-item"><a class="text-primary" href="https://novipovorot.pp.ua/blog.html">Блог</a></li>  
-	     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog-Medical-travel-abroad.html">Землетрясения</a></li> 
+	     <li class="breadcrumb-item"><a  class="text-secondary" href="https://novipovorot.pp.ua/blog-Medical-travel-abroad.html">Проблемы с паспортом</a></li> 
 	  </ol>
 	</nav>
        </div>
       <!-- //Хлебные крошки -->
 	    
         <h3 class="blog-desc-big text-center mb-4">
-	       Рекомендации во время землетрясения
+	       Проблемы с паспортом для выезда за границу в путешествии
 	      </h3>
         <div class="blog-post-align">
             <div class="blog-post-img">
@@ -166,17 +166,17 @@
                     <div class="d-grid left-right mt-5 pb-md-5">
                         <div class="buttons-singles text-left tags">
                             <h4>Тэги:</h4>
-                            <a href="#blog-tag">Землетрясения</a>
+                            <a href="#blog-tag">Проблемы с паспортом</a>
                         </div>
                         <div class="buttons-singles text-left">
                             <h4>Поделиться:</h4>
-                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/blog-Earthquake.html">
+                            <a href="https://www.facebook.com/sharer/sharer.php?u=https://novipovorot.pp.ua/blog-Passport-problems.html">
 				    <span class="fa fa-facebook" aria-hidden="true"></span>
 			    </a>
-                            <a href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/blog-Earthquake.html">
+                            <a href="https://twitter.com/intent/tweet?url=https://novipovorot.pp.ua/blog-Passport-problems.html">
 				    <span class="fa fa-twitter" aria-hidden="true"></span>
 		            </a>
-                            <a href="https://t.me/share/url?url=https://novipovorot.pp.ua/blog-Earthquake.html">
+                            <a href="https://t.me/share/url?url=https://novipovorot.pp.ua/blog-Passport-problems.html">
 				    <span class="fa fa-telegram" aria-hidden="true"></span>
 				</a>
                             
