--- a/blog-Passport-problems.html
+++ b/blog-Passport-problems.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="single-post-content">
                     <p class="alphabet mb-4 text-justify"><span class="big-letter">Т</span>
-			    урист в случае утери паспорта для выезда за границу на основании имеющихся документов, 
+			    урист в случае утери паспорта за рубежом для выезда за границу на основании имеющихся документов, 
 			    для подтверждения личности и принадлежности его к 
 			    гражданству Украины, оформляет в заграничном дипломатическом учреждении:
 			    удостоверение личности на возвращение в Украину или паспорт гражданина Украины для выезда за границу.
