--- a/blog.html
+++ b/blog.html
@@ -256,7 +256,7 @@
                     <div class="grids5-info">
                         <h4>03.</h4>
                         <div class="blog-info">
-                            <a href="#blog-single" class="blog-desc1"> 
+                            <a href="blog-Arrested-on-the-trip.html" class="blog-desc1"> 
 				    В путешествии задержали или арестовали
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
@@ -264,7 +264,7 @@
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
-                                    <span class="meta-value"> Июль 23, 2021  </span>
+                                    <span class="meta-value"> Июнь 08, 2021  </span>
                                 </li>
                             </ul>
                         </div>
