--- a/blog-Arrested-on-the-trip.html
+++ b/blog-Arrested-on-the-trip.html
@@ -125,6 +125,8 @@
                       режде всего, гражданам Украины предоставляется соответствующее содействие
                       в поиске квалифицированного защитника или обеспечении бесплатной правовой помощью,
                       если такая возможность предусмотрена законодательством соответствующей страны. 
+		    </p>
+                    <p class="mb-4 text-left">    
                       Консульские должностные лица следят за условиями содержания под стражей, 
                       которые должны отвечать требованиям гигиены и санитарии,
                       ходом рассмотрения дела и при необходимости принимают меры для 
