--- a/blog.html
+++ b/blog.html
@@ -281,7 +281,7 @@
                             </div>
                             <ul class="blog-meta">
                                 <li class="meta-item blog-lesson">
-                                    <span class="meta-value"> Июль 23, 2021  </span>
+                                    <span class="meta-value"> Май 28, 2021  </span>
                                 </li>
                             </ul>
                         </div>
