--- a/blog.html
+++ b/blog.html
@@ -273,7 +273,7 @@
                     <div class="grids5-info">
                         <h4>04.</h4>
                         <div class="blog-info">
-                            <a href="#blog-single" class="blog-desc1">
+                            <a href="blog-Entry-mode.html" class="blog-desc1">
 				    Режим въезда в страны мира 
                             </a>
                             <div class="author align-items-center mt-3 mb-1">
